--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
             </div>
           </div>
           <div
-            class="grid grid-rows-2 justify-center pt-10 md:pt-2 experiences-container"
+            class="grid grid-rows-2 justify-center pt-10 md:pt-2 md:pl-10 experiences-container"
           >
-            <div class="flex flex-column gap-24 pt-4 job-experience">
+            <div class="flex flex-column gap-10 md:gap-18  job-experience">
               <div class="year">
                 <p class="text-[#D94F04] year-text">2021</p>
               </div>
@@ -524,7 +524,7 @@
               </div>
             </div>
 
-            <div class="flex flex-column gap-24 pt-4 job-experience">
+            <div class="flex flex-column gap-10 md:gap-18 pt-4 job-experience">
               <div class="year">
                 <p class="text-[#D94F04] year-text">2022</p>
               </div>
@@ -550,22 +550,22 @@
           class="flex flex-col justify-center max-w-3xl p-4 text-gray-800 bg-white rounded-lg shadow-md shadow-cyan-700/50 m-auto mb-20"
         >
           <div class="mb-2">
-            <div class="h-3 text-3xl text-left text-[#D94F04]">“</div>
-            <p class="px-4 text-center text-gray-600">
+            <div class="h-3 text-2xl text-left md:text-3xl text-[#D94F04]">“</div>
+            <p class="px-4 text-sm md:text-base lg:text-lg text-center text-gray-600">
               I have worked with Dennis for over 3 years now and have always
               been impressed with the level of service he provides. He is
               excellent at understanding our clients needs, he is patient and
               willing to go the extra mile to ensure his design works fits
               perfectly for the client. I would highly recommend Dennis Kimathi.
             </p>
-            <div class="h-3 text-3xl text-right text-[#D94F04]">”</div>
+            <div class="h-3 text-2xl md:text-3xl text-right text-[#D94F04]">”</div>
             <div class="flex justify-center gap-7 pt-4">
               <div class="w-1/12 profile-image">
                 <img src="./assets/images/Profile.png" alt="" />
               </div>
               <div class="text-center">
-                <h5 class="font-bold text-[#D94F04]">Clinton Murilla</h5>
-                <p class="pt-3 text-sm text-gray-600">WinTech Systems CEO</p>
+                <h5 class="font-bold text-sm md:text-base lg:text-lg text-[#D94F04]">Clinton Murilla</h5>
+                <p class="pt-3 text-sm md:text-base lg:text-lg text-gray-600">WinTech Systems CEO</p>
               </div>
             </div>
           </div>
@@ -591,10 +591,10 @@
         </h1>
         <div class="m-auto w-fit">
           <div
-            class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 gap-10 justify-center contacts-container"
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 gap-10 justify-center contacts-container"
           >
             <div
-              class="flex gap-6 m-auto py-8 px-14 rounded-md bg-[#F4E2DE]/[0.4] contact-info"
+              class="content-center flex flex-row gap-2 xs:flex-row sm:flex-row sm:gap-2 md:flex-row md:gap-2 lg:gap-6 text-sm m-auto py-6 px-12 rounded-md bg-[#F4E2DE]/[0.4] contact-info"
             >
               <i class="text-xl text-[#D94F04] fa-solid fa-envelope"></i>
               <p class="contact-info-email">
@@ -604,7 +604,7 @@
               </p>
             </div>
             <div
-              class="flex gap-10 py-8 px-14 rounded-md bg-[#F4E2DE]/[0.4] contact-info"
+              class="content-center flex gap-2 sm:flex-row sm:gap-2 md:flex-row md:gap-2 lg:gap-6 text-sm m-auto py-6 px-12 rounded-md bg-[#F4E2DE]/[0.4]  contact-info"
             >
               <i class="text-xl text-[#D94F04] fa-solid fa-phone"></i>
               <p class="contact-info-phone">
